dark mode fix (mozna)

--- a/Source/EvidenceProject/wwwroot/css/darkMode.css
+++ b/Source/EvidenceProject/wwwroot/css/darkMode.css
@@ -4,13 +4,14 @@ html {
   font-size: 14px;
   position: relative;
   min-height: 100%;
-  background-color: white;
+  background-color: black;
+  color: white;
 }
 
 
 h1{
   font-weight: bold;
-  color: black;
+  color: white;
 }
 
 footer{
